[gd_scene load_steps=9 format=3 uid="uid://36fxkugwg738"]

[ext_resource type="Script" path="res://Menus/character_select.gd" id="2_rdqyx"]
[ext_resource type="Texture2D" uid="uid://dj33hp54ba015" path="res://Textures/Playable Character Sprites/KingArthur/Icon_KingArthur_00.png" id="2_rsse1"]
[ext_resource type="Texture2D" uid="uid://dpei4ttym5q3f" path="res://Textures/Playable Character Sprites/RobinHood/Icon_RobinHood_00.png" id="3_sdn5r"]
[ext_resource type="Texture2D" uid="uid://h6q16tiys3b6" path="res://Textures/Playable Character Sprites/Goose/Icon_Goose_00.png" id="4_73fa4"]
[ext_resource type="Texture2D" uid="uid://cnbn1d3ndnn08" path="res://Images/Textures/Face Icon Smol.png" id="5_y3g3i"]

[sub_resource type="Animation" id="Animation_od63q"]
resource_name = "StartUpAnim"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonControl/Select_Character1_Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(3.03144, 3.03144),
"update": 0,
"values": [Vector2(-600, 11), Vector2(26, 11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonControl/Select_Character2_Button:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(3.24901, 3.24901),
"update": 0,
"values": [Vector2(-600, 161), Vector2(26, 161)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ButtonControl/Select_Character3_Button:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.7),
"transitions": PackedFloat32Array(3.24901, 3.24901),
"update": 0,
"values": [Vector2(-600, 311), Vector2(26, 311)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ButtonControl/Select_Character4_Button:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.3, 1.8),
"transitions": PackedFloat32Array(3.03143, 3.03143),
"update": 0,
"values": [Vector2(1064, 11), Vector2(438, 11)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ButtonControl/Select_Character5_Button:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1, 1.5),
"transitions": PackedFloat32Array(3.03143, 3.03143),
"update": 0,
"values": [Vector2(1064, 161), Vector2(438, 161)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ButtonControl/Select_Character6_Button:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1.5, 2),
"transitions": PackedFloat32Array(3.03143, 3.03143),
"update": 0,
"values": [Vector2(1064, 311), Vector2(438, 311)]
}

[sub_resource type="Animation" id="Animation_tivga"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ButtonControl/Select_Character1_Button:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(26, 11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ButtonControl/Select_Character2_Button:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(26, 161)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ButtonControl/Select_Character3_Button:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(26, 311)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ButtonControl/Select_Character4_Button:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(438, 11)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ButtonControl/Select_Character5_Button:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(438, 161)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ButtonControl/Select_Character6_Button:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(438, 311)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cl4ps"]
_data = {
"RESET": SubResource("Animation_tivga"),
"StartUpAnim": SubResource("Animation_od63q")
}

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_rdqyx")
target_Level_level_1 = "Levels/DebugLevel.tscn"
target_Level_main_menu = "Menus/main_menu.tscn"

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
offset_left = 969.0
offset_top = 596.0
offset_right = 1141.0
offset_bottom = 638.0
theme_override_font_sizes/font_size = 24
text = "Confirm Team"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 22.0
offset_right = 191.0
offset_bottom = 64.0
theme_override_font_sizes/font_size = 22
text = "< Return to Menu"

[node name="ButtonControl" type="Control" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 144.0
offset_top = 104.0
offset_right = -144.0
offset_bottom = -80.0
pivot_offset = Vector2(432, 232)

[node name="Select_Character1_Button" type="Button" parent="ButtonControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 11.0
offset_right = -438.001
offset_bottom = -313.0
text = "Select
Character1"
icon = ExtResource("2_rsse1")
alignment = 0

[node name="Select_Character2_Button" type="Button" parent="ButtonControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 161.0
offset_right = -437.999
offset_bottom = -163.0
text = "Select
Character2"
icon = ExtResource("3_sdn5r")
alignment = 0

[node name="Select_Character3_Button" type="Button" parent="ButtonControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 311.0
offset_right = -438.0
offset_bottom = -13.0
text = "Select
Character3"
icon = ExtResource("4_73fa4")
alignment = 0

[node name="Select_Character4_Button" type="Button" parent="ButtonControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 438.0
offset_top = 11.0
offset_right = -25.9985
offset_bottom = -313.0
grow_horizontal = 2
grow_vertical = 2
text = "Select
Character4"
icon = ExtResource("5_y3g3i")
alignment = 0

[node name="Select_Character5_Button" type="Button" parent="ButtonControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 438.0
offset_top = 161.0
offset_right = -25.9998
offset_bottom = -163.0
grow_horizontal = 2
grow_vertical = 2
text = "Select
Character5"
icon = ExtResource("5_y3g3i")
alignment = 0

[node name="Select_Character6_Button" type="Button" parent="ButtonControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 438.0
offset_top = 311.0
offset_right = -26.0004
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
text = "Select
Character6"
icon = ExtResource("5_y3g3i")
alignment = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cl4ps")
}
autoplay = "StartUpAnim"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 276.0
offset_top = 21.0
offset_right = -276.0
offset_bottom = -563.0
pivot_offset = Vector2(300, 32)
theme_override_font_sizes/font_size = 32
text = "Select Team ( needs to be finished )"
horizontal_alignment = 1

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ButtonControl/Select_Character1_Button" to="." method="_on_select_character_1_button_pressed"]
[connection signal="pressed" from="ButtonControl/Select_Character2_Button" to="." method="_on_select_character_2_button_pressed"]
[connection signal="pressed" from="ButtonControl/Select_Character3_Button" to="." method="_on_select_character_2_button_pressed"]
[connection signal="pressed" from="ButtonControl/Select_Character4_Button" to="." method="_on_select_character_1_button_pressed"]
[connection signal="pressed" from="ButtonControl/Select_Character5_Button" to="." method="_on_select_character_2_button_pressed"]
[connection signal="pressed" from="ButtonControl/Select_Character6_Button" to="." method="_on_select_character_2_button_pressed"]
